[package]
edition = "2021"
name = "db"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#
configs = {path = "../configs"}
#
#poem = {version = "1.2", features = ["static-files", "rustls", "anyhow"]}
#web server
actix-web = "4"
#actix-http = "3"
# 静态文件服务
#actix-files = "0"
actix-identity = "0"
actix-multipart = "0"
actix-web-actors = "4"
actix-form-data = "0.6"

#
chrono = {version = "0.4", features = ["serde"]}
once_cell = "1.9"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1"
tokio = {version = "1", features = ["rt-multi-thread", "macros", "parking_lot", "signal"]}
tracing = {git = "https://github.com/tokio-rs/tracing.git"}

#
anyhow = "1.0"
thiserror = "1.0"

derive_more = "0.99"

mime = "0.3"
delay_timer = {version = "0.11"}

[dependencies.sea-orm]
default-features = false
features = ["macros", "runtime-tokio-native-tls"]
version = "0.7"

[features]
# default = ["postgres"]
default = ["postgres", "mysql", "sqlite"]
mysql = ["sea-orm/sqlx-mysql"]
postgres = ["sea-orm/sqlx-postgres"]
sqlite = ["sea-orm/sqlx-sqlite"]
